fix(ui): adjust arrow icon position on tablet and monitor (#29)
- Repositioned arrow icon for better visibility and comfort.
- Enable horizontal swipe across the entire about me section on tablets.

Fixes #29
Fixes #32

--- a/src/base/main.css
+++ b/src/base/main.css
@@ -12,7 +12,7 @@
     --font-size-p: 1em;
     --font-size-link: 1em;
 
-    --size-icon: 2.5em;
+    --size-icon: 2em;
     --size-image: 15em;
 }
 
